# project_templet_rust

./: Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  makefile
scripts/: build-release.sh  run-unittest.sh
src/dsapi/: Cargo.toml
src/ragcli/: Cargo.toml
src/ragcli/src/: main.rs
src/vectorstore/: Cargo.toml
